Sync all content

--- a/content/resources/mit8_333f13_lec1.md
+++ b/content/resources/mit8_333f13_lec1.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 1'
 uid: 0d0ec730-e8e0-2ed0-399d-39ff05054a72
