--- a/content/resources/mit8_333f13_lec15.md
+++ b/content/resources/mit8_333f13_lec15.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 15'
 uid: fe267b8b-9cd0-8ef3-3108-8a380ce89c24
