--- a/content/resources/mit8_333f13_lec17.md
+++ b/content/resources/mit8_333f13_lec17.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 17'
 uid: 6739dd60-5517-6b78-b910-3e2de8850978
