--- a/content/resources/mit8_333f13_lec2.md
+++ b/content/resources/mit8_333f13_lec2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 2'
 uid: 1a131e22-5246-d974-9a29-8f49675c5fe5
