--- a/content/resources/mit8_333f13_lec26.md
+++ b/content/resources/mit8_333f13_lec26.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 26'
 uid: 7e6c7093-1d8b-d79f-e237-60fe3eedfb7b
