--- a/content/resources/mit8_333f13_lec9.md
+++ b/content/resources/mit8_333f13_lec9.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 9'
 uid: ce250b44-3901-0635-1cb9-7aafb0060ca7
