--- a/content/resources/mit8_333f13_lec10.md
+++ b/content/resources/mit8_333f13_lec10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 10'
 uid: ae32d4e5-3c9f-a0be-e417-1378caa4ea84
