--- a/content/resources/mit8_333f13_lec11.md
+++ b/content/resources/mit8_333f13_lec11.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 11'
 uid: 7b163cc0-ea13-59b7-0b01-8a1415399d64
