--- a/content/resources/mit8_333f13_lec12.md
+++ b/content/resources/mit8_333f13_lec12.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 12'
 uid: 0cb99318-c2ed-8893-16cd-cff839759e8d
