--- a/content/resources/mit8_333f13_lec14.md
+++ b/content/resources/mit8_333f13_lec14.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 14'
 uid: 89259a8f-d183-acfa-ec06-922c88a6024b
