--- a/content/resources/mit8_333f13_lec16.md
+++ b/content/resources/mit8_333f13_lec16.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 16'
 uid: 2ef1be3b-b5b4-2edc-fd13-eb38e7204ecf
