--- a/content/resources/mit8_333f13_lec18.md
+++ b/content/resources/mit8_333f13_lec18.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 18'
 uid: 7425bcac-56bd-0c9d-fe0f-441344ca58e8
