--- a/content/resources/mit8_333f13_lec19.md
+++ b/content/resources/mit8_333f13_lec19.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 19'
 uid: 9aefe412-bfeb-bc12-42c7-3ce46c38cd57
