--- a/content/resources/mit8_333f13_lec20.md
+++ b/content/resources/mit8_333f13_lec20.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 20'
 uid: 368b2180-e6ef-a141-7ab3-36d79b2df6db
