--- a/content/resources/mit8_333f13_lec21.md
+++ b/content/resources/mit8_333f13_lec21.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 21'
 uid: 4f8defd6-fcba-707a-0c69-1dd8957a43e3
