--- a/content/resources/mit8_333f13_lec22.md
+++ b/content/resources/mit8_333f13_lec22.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 22'
 uid: 7f26f530-bdda-5d69-c399-057bd4b1bd28
