--- a/content/resources/mit8_333f13_lec25.md
+++ b/content/resources/mit8_333f13_lec25.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 25'
 uid: 85cd383f-3ca4-573c-3d57-8db435257c5a
