--- a/content/resources/mit8_333f13_lec3.md
+++ b/content/resources/mit8_333f13_lec3.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 3'
 uid: df0c4e12-1858-c0be-246b-496dd8c39d2c
