--- a/content/resources/mit8_333f13_lec4.md
+++ b/content/resources/mit8_333f13_lec4.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 4'
 uid: 97dcd8de-e3d3-301c-d7c2-7745b17b10b5
