--- a/content/resources/mit8_333f13_lec6.md
+++ b/content/resources/mit8_333f13_lec6.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 6'
 uid: d6cfa6c7-32e8-26b0-dc32-61423b0de766
