--- a/content/resources/mit8_333f13_lec7.md
+++ b/content/resources/mit8_333f13_lec7.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: ffe015bb-11d9-f907-6c10-fdcdfd117edb
 resourcetype: Document
 title: 'Statistical Mechanics I: Lecture 7'
 uid: e84a1d80-7e85-6753-60d9-ac0098b61885
